--- a/Python/PrimesInNumbers.ipynb
+++ b/Python/PrimesInNumbers.ipynb
@@ -64,13 +64,15 @@
    "source": [
     "These outputs are interpreted as:\n",
     "\n",
-    "$\n",
-    "100 = 2^2 \\times 5^2 \\\\\n",
-    "2019 = 3 \\times 673 \\\\\n",
-    "2525 = 5^2 \\times 101 \\\\\n",
-    "12 = 2^2 \\times 3 \\\\\n",
-    "365 = 5 \\times 73\n",
-    "$\n",
+    "$ 100 = 2^2 \\times 5^2 $\n",
+    "\n",
+    "$ 2019 = 3 \\times 673 $\n",
+    "\n",
+    "$ 2525 = 5^2 \\times 101 $\n",
+    "\n",
+    "$ 12 = 2^2 \\times 3 $\n",
+    "\n",
+    "$ 365 = 5 \\times 73 $\n",
     "\n",
     "The prime factors are sorted in an ascending order, ignoring the powers."
    ]
