--- a/Python/Linear Regression.ipynb
+++ b/Python/Linear Regression.ipynb
@@ -112,9 +112,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The <font color=\"red\">red</font> line shows the accurate regression line, while the <font color=\"blue\">blue</font>, <font color=\"cyan\">cyan</font>, <font color=\"purple\">purple</font>, <font color=\"#CCCC00\">yellow</font> and <font color=\"green\">green</font> lines show our model's ouputs at `e` equal to $\\cfrac{1}{50}, \\cfrac{1}{100}, \\cfrac{1}{500}, \\cfrac{1}{1000}, \\cfrac{1}{5000}$ consecutively.\n",
+    "The <font color="red">red</font> line shows the accurate regression line, while the <font color="blue">blue</font>, <font color="cyan">cyan</font>, <font color="purple">purple</font>, <font color="#CCCC00">yellow</font> and <font color="green">green</font> lines show our model's ouputs at `e` equal to $\\cfrac{1}{50}, \\cfrac{1}{100}, \\cfrac{1}{500}, \\cfrac{1}{1000}, \\cfrac{1}{5000}$ consecutively.\n",
     "\n",
-    "As we decrease the **error rate**, our model apparently becomes more accurate, as the model line tilts closer towards the regression line, with the <font color=\"green\">green</font> line being the most accurate at `e = 1/5000`."
+    "As we decrease the **error rate**, our model apparently becomes more accurate, as the model line tilts closer towards the regression line, with the <font color="green">green</font> line being the most accurate at `e = 1/5000`."
    ]
   },
   {
